--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 									<div class="col-12 col-md-6">
 										<div class="advantages-block">
 											<div class="advantages-block__img">
-												<img src="img/main/img-1.png" alt="">
+												<img src="img/main/img-1.svg" alt="">
 											</div>
 											<!-- /.advantages-block__img -->
 											<div class="advantages-block__text">
@@ -140,7 +140,7 @@
 										<!-- /.advantages-block -->
 										<div class="advantages-block">
 											<div class="advantages-block__img">
-												<img src="img/main/img-2.png" alt="">
+												<img src="img/main/img-2.svg" alt="">
 											</div>
 											<!-- /.advantages-block__img -->
 											<div class="advantages-block__text">
@@ -151,7 +151,7 @@
 										<!-- /.advantages-block -->
 										<div class="advantages-block">
 											<div class="advantages-block__img">
-												<img src="img/main/img-3.png" alt="">
+												<img src="img/main/img-3.svg" alt="">
 											</div>
 											<!-- /.advantages-block__img -->
 											<div class="advantages-block__text">
@@ -165,7 +165,7 @@
 									<div class="col-12 col-md-6">
 										<div class="advantages-block">
 											<div class="advantages-block__img">
-												<img src="img/main/img-4.png" alt="">
+												<img src="img/main/img-4.svg" alt="">
 											</div>
 											<!-- /.advantages-block__img -->
 											<div class="advantages-block__text">
@@ -176,7 +176,7 @@
 										<!-- /.advantages-block -->
 										<div class="advantages-block">
 											<div class="advantages-block__img">
-												<img src="img/main/img-5.png" alt="">
+												<img src="img/main/img-5.svg" alt="">
 											</div>
 											<!-- /.advantages-block__img -->
 											<div class="advantages-block__text">
@@ -187,7 +187,7 @@
 										<!-- /.advantages-block -->
 										<div class="advantages-block advantages-block_last">
 											<div class="advantages-block__img">
-												<img src="img/main/img-6.png" alt="">
+												<img src="img/main/img-6.svg" alt="">
 											</div>
 											<!-- /.advantages-block__img -->
 											<div class="advantages-block__text">
@@ -370,11 +370,11 @@
 					</div>
 					<!-- /.slider-slider__img -->
 					<div class="slider-block__name">
-						Резак 18 мм
+						Вышивка на фартуке
 					</div>
 					<!-- /.slider-name -->
 					<div class="slider-block__price">
-						от 500 грн.
+						от 200 грн.
 					</div>
 					<!-- /.slider-price -->
 					<a class="slider-block__button">
@@ -391,7 +391,7 @@
 					</div>
 					<!-- /.slider-slider__img -->
 					<div class="slider-block__name">
-						Реказ 9 мм
+						Вышивка на подушке
 					</div>
 					<!-- /.slider-name -->
 					<div class="slider-block__price">
@@ -410,11 +410,11 @@
 					</div>
 					<!-- /.slider-slider__img -->
 					<div class="slider-block__name">
-						Коврик для резки
+						Вышивка на халате
 					</div>
 					<!-- /.slider-name -->
 					<div class="slider-block__price">
-						от 350 грн.
+						от 300 грн.
 					</div>
 					<!-- /.slider-price -->
 					<a class="slider-block__button">
@@ -429,11 +429,11 @@
 					</div>
 					<!-- /.slider-slider__img -->
 					<div class="slider-block__name">
-						Линейка
+						Шевроны
 					</div>
 					<!-- /.slider-name -->
 					<div class="slider-block__price">
-						от 400 грн.
+						от 200 грн.
 					</div>
 					<!-- /.slider-price -->
 					<a class="slider-block__button">
@@ -444,15 +444,15 @@
 				<!-- /.slider-block -->
 				<div class="slider-block">
 					<div class="slider-block__img">
-						<img src="img/tools/tools-slide-3/slide-3-1img.png" alt="">
+						<img src="img/tools/tools-slide-5/slide-5-1img.png" alt="">
 					</div>
 					<!-- /.slider-slider__img -->
 					<div class="slider-block__name">
-						Коврик для резки
+						Вышивка на футболках
 					</div>
 					<!-- /.slider-name -->
 					<div class="slider-block__price">
-						от 350 грн.
+						от 100 грн.
 					</div>
 					<!-- /.slider-price -->
 					<a class="slider-block__button">
@@ -485,12 +485,11 @@
 					</div>
 					<!-- /.slider-slider__img -->
 					<div class="slider-block__name">
-						Модели людей масштаб 1:50,
-						1:87, 1:100, 1:150, 1:200
+						Именные значки
 					</div>
 					<!-- /.slider-name -->
 					<div class="slider-block__price">
-						от 500 грн.
+						от 100 грн.
 					</div>
 					<!-- /.slider-price -->
 					<a class="slider-block__button">
@@ -505,8 +504,7 @@
 					</div>
 					<!-- /.slider-slider__img -->
 					<div class="slider-block__name">
-						Модели авто масштаб 1:50,
-						1:87, 1:100, 1:150, 1:200
+						Металлические значки
 					</div>
 					<!-- /.slider-name -->
 					<div class="slider-block__price">
@@ -525,12 +523,11 @@
 					</div>
 					<!-- /.slider-slider__img -->
 					<div class="slider-block__name">
-						Модели деревьев масштаб 1:50,
-						1:87, 1:100, 1:150, 1:200
+						Подставки для смартфонов
 					</div>
 					<!-- /.slider-name -->
 					<div class="slider-block__price">
-						от 350 грн.
+						от 50 грн.
 					</div>
 					<!-- /.slider-price -->
 					<a class="slider-block__button">
@@ -545,12 +542,11 @@
 					</div>
 					<!-- /.slider-slider__img -->
 					<div class="slider-block__name">
-						Модели фонарей масштаб 1:50,
-						1:87, 1:100, 1:150, 1:200
+						Металлические бейджи
 					</div>
 					<!-- /.slider-name -->
 					<div class="slider-block__price">
-						от 400 грн.
+						от 30 грн.
 					</div>
 					<!-- /.slider-price -->
 					<a class="slider-block__button">
@@ -561,16 +557,34 @@
 				<!-- /.slider-block -->
 				<div class="slider-block">
 					<div class="slider-block__img">
-						<img src="img/prototyping/prototyping-slide-3/slide-3-1img.png" alt="">
+						<img src="img/prototyping/prototyping-slide-5/slide-5-1img.png" alt="">
 					</div>
 					<!-- /.slider-slider__img -->
 					<div class="slider-block__name">
-						Модели деревьев масштаб 1:50,
-						1:87, 1:100, 1:150, 1:200
+						Стильные визитки
 					</div>
 					<!-- /.slider-name -->
 					<div class="slider-block__price">
-						от 350 грн.
+						от 20 грн.
+					</div>
+					<!-- /.slider-price -->
+					<a class="slider-block__button">
+						<div class="slider-block__button_img"></div>
+						<div class="slider-block__button_text">Купить</div>
+					</a>
+				</div>
+				<!-- /.slider-block -->
+				<div class="slider-block">
+					<div class="slider-block__img">
+						<img src="img/prototyping/prototyping-slide-6/slide-6-1img.png" alt="">
+					</div>
+					<!-- /.slider-slider__img -->
+					<div class="slider-block__name">
+						Темпель для одежды
+					</div>
+					<!-- /.slider-name -->
+					<div class="slider-block__price">
+						от 20 грн.
 					</div>
 					<!-- /.slider-price -->
 					<a class="slider-block__button">
@@ -649,7 +663,7 @@
 					<div class="col-12 col-lg-3">
 						<div class="manual-block">
 							<div class="manual-block__img">
-								<img src="img/manual/manual-img-1.png" alt="">
+								<img src="img/manual/manual-img-1.svg" alt="">
 							</div>
 							<!-- /.manual-img -->
 							<div class="manual-block__text">
@@ -668,7 +682,7 @@
 					<div class="col-12 col-lg-3">
 						<div class="manual-block">
 							<div class="manual-block__img">
-								<img src="img/manual/manual-img-2.png" alt="">
+								<img src="img/manual/manual-img-2.svg" alt="">
 							</div>
 							<!-- /.manual-img -->
 							<div class="manual-block__text">
@@ -685,7 +699,7 @@
 					<div class="col-12 col-lg-3">
 						<div class="manual-block">
 							<div class="manual-block__img">
-								<img src="img/manual/manual-img-3.png" alt="">
+								<img src="img/manual/manual-img-3.svg" alt="">
 							</div>
 							<!-- /.manual-img -->
 							<div class="manual-block__text">
@@ -704,7 +718,7 @@
 					<div class="col-12 col-lg-3">
 						<div class="manual-block manual-block_last">
 							<div class="manual-block__img">
-								<img src="img/manual/manual-img-4.png" alt="">
+								<img src="img/manual/manual-img-4.svg" alt="">
 							</div>
 							<!-- /.manual-img -->
 							<div class="manual-block__text">
