--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
 									<img src="img/header-footer/header-label.png" class="header-adress__icon" alt="">
 									<!-- /.adress-icon -->
 									<div class="header-adress__text">
-										Украина, Днепропетровская область<br>
-										Кривой Рог, Пушкина, д.2
+										<a href="#contacts">
+											Украина, Днепропетровская область<br>
+											Кривой Рог, Пушкина, д.2
+										</a>
+
 									</div>
 									<!-- /.adress-text -->
 								</div>
@@ -867,8 +870,10 @@
 		</div>
 		<!-- /.contacts  -->
 		<div class="map">
-			<script async
-				src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abc64111efa18e9cd45b67a4899437e2ea575494fa0d59ee70708c66b4397775f&amp;width=100%25&amp;height=417&amp;lang=ru_RU&amp;scroll=false"></script>
+			<iframe
+				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2674.433347249844!2d33.34316041602662!3d47.90865197920582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dadf4d0e9e9855%3A0xc29f2e3506ed5ea1!2z0JPQldCb0IbQntChLdCf0KDQmNCd0KI!5e0!3m2!1sru!2sua!4v1612257894676!5m2!1sru!2sua"
+				width="100%" height="300px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+				tabindex="0"></iframe>
 		</div>
 	</div>
 	<!-- /.contacts-bg -->
@@ -928,7 +933,7 @@
 							</div>
 							<!-- /.footer-contacts__phone -->
 							<div class="footer-contacts__order show-order">
-								Заказать макетные запчасти
+								Заказать товар
 							</div>
 						</div>
 						<!-- /.footer-contacts -->
