--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 		<!-- Главная секция -->
 		<div class="main" id="main">
 			<div class="container">
-				<div class="row justify-content-md-center justify-content-xl-between align-items-lg-center">
-					<div class="col-12 col-lg-7 col-xl-7">
+				<div class="row justify-content--center justify-content-xl-between align-items-lg-center">
+					<div class="col-12 col-lg-7 col-xl-7 align-items-lg-start">
 						<div class="advantages">
 							<div class="advantages-title">
 								<h1>ГЕЛИОС-ПРИНТ не просто полиграфия.
@@ -115,7 +115,8 @@
 							<!-- /.advantages-title -->
 							<div class="advantages-subtitle">
 								<ul>
-									<li>Цифровая, ризографическая и широкоформатная печать.</li>
+									<li>Цифровая, ризографическая печать.</li>
+									<li>Широкоформатная печать.</li>
 									<li>Изготовлении
 										сувенирной продукции.</li>
 									<li>Hанесении на
