--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
 				<div class="col-12 col-md-6 col-xl-3">
 					<div class="delivery-block">
 						<div class="delivery-block__img">
-							<img src="img/delivery/delivery-img-1.png" alt="">
+							<img src="img/delivery/delivery-img-1.svg" alt="">
 						</div>
 						<!-- /.delivery-block__img -->
 						<div class="delivery-block__text">
@@ -765,7 +765,7 @@
 				<div class="col-12 col-md-6 col-xl-3">
 					<div class="delivery-block">
 						<div class="delivery-block__img">
-							<img src="img/delivery/delivery-img-2.png" alt="">
+							<img src="img/delivery/delivery-img-2.svg" alt="">
 						</div>
 						<!-- /.delivery-block__img -->
 						<div class="delivery-block__text">
