--- a/index.html
+++ b/index.html
@@ -872,6 +872,22 @@
 						</div>
 						<!-- /.contacts-block -->
 					</div>
+					<div class="col-12 col-md-3">
+						<div class="contacts-block contacts-block_last">
+							<div class="contacts-block__img">
+								<a href="https://www.instagram.com/heliosprint/">
+									<img src="img/contacts/contacts-insta.png" alt="">
+								</a>
+
+							</div>
+							<!-- /.contacts-block__img -->
+							<div class="contacts-block__text">
+								Мы в соцсетях
+							</div>
+							<!-- /.contacts-block__text -->
+						</div>
+						<!-- /.contacts-block -->
+					</div>
 					<!-- /.col-4 -->
 				</div>
 				<!-- /.row -->
@@ -956,6 +972,13 @@
 		</footer>
 		<!-- /.footer -->
 	</div>
+
+
+	<div class="fixedbut">
+		<a href="https://www.instagram.com/heliosprint/">
+			<img src="img/contacts/contacts-insta.png" alt="">
+		</a>
+	</div>
 	<!-- /.footer-bg -->
 	<div class="overlay animated fadeIn">
 		<div class="popup">
@@ -1003,7 +1026,7 @@
 				<div class="politic-popup__title">
 					Политика в отношении обработки персональных данных
 					<p>
-						<a href="policy/policy.pdf" download="policy/policy.pdf">policy.pdf,</a> 422 КБ
+						<a href="policy/policy.pdf" download="policy/policy.pdf">policy.pdf,</a> 423 КБ
 					</p>
 				</div>
 				<p>
@@ -1050,14 +1073,9 @@
 	</script>
 	<script src="js/wow.min.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
-	<script src="js/main.js">
-	</script>
+	<script src="js/main.js">	</script>
 
 
-
-	<script>
-
-	</script>
 
 	<script>
 		new WOW().init();
