--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
 	<a class="menu-link">
 		<span></span>
 	</a>
-	<div class="fixedbut">
-		<a href="https://www.instagram.com/heliosprint/">
-			<img src="img/contacts/contacts-insta.png" alt="">
-		</a>
-	</div>
+
 
 	<!-- Хэдер -->
 	<div class="header-bg">
@@ -59,7 +55,7 @@
 							</div>
 							<!-- /.col-4 -->
 							<div class="col-12 col-lg-5">
-								<div class="header-adress header-adress_email justify-content-center">
+								<div class="header-adress header-adress_email justify-content-start">
 									<img src="img/header-footer/header-mail.png" class="header-adress__icon header-mail__icon" alt="">
 									<!-- /.adress-icon -->
 									<div class="header-adress__text header-mail__text">
@@ -866,7 +862,7 @@
 					</div>
 					<!-- /.col-4 -->
 					<div class="col-12 col-md-3">
-						<div class="contacts-block contacts-block_last">
+						<div class="contacts-block contacts-block">
 							<div class="contacts-block__img">
 								<img src="img/contacts/contacts-clock.png" alt="">
 							</div>
@@ -919,17 +915,17 @@
 	<div class="footer-bg">
 		<footer class="footer">
 			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-5 col-sm-3 col-lg-3">
+				<div class="row align-items-center justify-content-around">
+					<div class="col-5 col-sm-1 col-lg-3">
 						<a href="#" class="footer-logo">
 							<!-- <div class="footer-logo__img"></div> -->
-							<img src="img/header-footer/header-logo.png" class="header-logo__img" alt="">
+							<img src="img/header-footer/header-logo.png" class="footer-logo__img" alt="">
 						</a>
 					</div>
 					<!-- /.col-3 -->
 					<div class="order-last col-12 order-sm-0 col-sm-4 col-lg-6">
-						<div class="row">
-							<div class="col-12 col-lg-7">
+						<div class="row ">
+							<div class="col-12 col-lg-7 p-sm-0">
 								<div class="footer-adress">
 									<img src="img/header-footer/header-label.png" class="header-adress__icon" alt="">
 									<!-- /.adress-icon -->
@@ -978,8 +974,11 @@
 		</footer>
 		<!-- /.footer -->
 	</div>
-
-
+	<div class="fixedbut">
+		<a href="https://www.instagram.com/heliosprint/">
+			<img src="img/contacts/contacts-insta.png" alt="insta">
+		</a>
+	</div>
 
 	<!-- /.footer-bg -->
 	<div class="overlay animated fadeIn">
@@ -1018,7 +1017,8 @@
 				</div>
 				<p>
 					Политика в отношении персональных данных определяет основные принципы и правила по обработке персональных
-					данных, которыми мы руководствуемся в нашей работе, также в общении с клиентами, поставщиками и сотрудниками.
+					данных, которыми мы руководствуемся в нашей работе, также в общении с клиентами, поставщиками и
+					сотрудниками.
 					Политика в отношении обработки персональных данных распространяется на всех наших сотрудников.
 				</p>
 				<p>
