--- a/index.html
+++ b/index.html
@@ -126,13 +126,12 @@
 							<!-- /.advantages-title -->
 							<div class="advantages-subtitle">
 								<ul>
-									<li>Цифровая, ризографическая печать.</li>
+									<li>Цифровая печать.</li>
+									<li>Ризографическая печать.</li>
 									<li>Широкоформатная печать.</li>
-									<li>Изготовлении
-										сувенирной продукции.</li>
-									<li>Hанесении на
-										одежду и
-										многое другое.</li>
+									<li>Изготовление сувенирной продукции.</li>
+									<li>Hанесение изображения на одежду и многое другое.</li>
+									<li>Лазерная гравировка</li>
 								</ul>
 
 							</div>
@@ -184,7 +183,7 @@
 											</div>
 											<!-- /.advantages-block__img -->
 											<div class="advantages-block__text">
-												Современное оборудование и материалы
+												Современное оборудование и товары
 											</div>
 											<!-- /.advantages-block__text -->
 										</div>
@@ -232,7 +231,7 @@
 								<input type="text" name="user_name" class="form-input" placeholder="Ваше имя" required>
 								<input type="tel" name="user_phone" class="form-input input-phone" placeholder="Контактный телефон"
 									required>
-								<textarea name="user_text" class="form-input form-textarea" placeholder="Какие товар вам необходим?"
+								<textarea name="user_text" class="form-input form-textarea" placeholder="Какие товары вам необходимы?"
 									cols="20" rows="3" required></textarea>
 								<button class="form-button" type="submit">Оставить заявку</button>
 								<div class="form-small">
@@ -371,7 +370,7 @@
 	<section class="section-slider tools" id="tools">
 		<div class="section-title">
 			<h2>
-				Вышивка
+				Индивидуальная вышивка
 			</h2>
 		</div>
 		<!-- /.section-title -->
@@ -987,14 +986,14 @@
 				<div class="popup_close">&#10005;</div>
 				<div class="form-main">
 					<div class="form-title">
-						Закажите макетные материалы
+						Закажите макетные товары
 						прямо сейчас
 					</div>
 					<!-- /.form-title -->
 					<input type="text" name="user_name" class="form-input" placeholder="Ваше имя" required>
 					<input type="tel" name="user_phone" id="phone1" class="form-input input-phone"
 						placeholder="Контактный телефон" required>
-					<textarea name="user_text" class="form-input form-textarea" placeholder="Какие материалы вам требуются?"
+					<textarea name="user_text" class="form-input form-textarea" placeholder="Какие товары вам требуются?"
 						cols="20" rows="3" required></textarea>
 					<button class="form-button" type="submit">Оставить заявку</button>
 					<div class="form-small">
@@ -1063,25 +1062,10 @@
 	<!-- Скрипты -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="slick/slick.min.js"></script>
-	<script>
-		$(document).ready(function () {
-			$('.show-order').on("click", function () {
-				$('.overlay').show()
-			});
-			$('.popup_close').on("click", function () {
-				$('.overlay').hide()
-			});
-		});
-	</script>
 	<script src="js/wow.min.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
 	<script src="js/main.js">	</script>
 
-
-
-	<script>
-		new WOW().init();
-	</script>
 </body>
 
 </html>
