--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 					<div class="col-12 col-lg-7 col-xl-7 align-items-lg-start">
 						<div class="advantages">
 							<div class="advantages-title">
-								<h1>ГЕЛИОС-ПРИНТ не просто полиграфия.
+								<h1>ГЕЛИОС-ПРИНТ <br>не просто полиграфия.
 								</h1>
 
 							</div>
@@ -130,8 +130,8 @@
 									<li>Ризографическая печать.</li>
 									<li>Широкоформатная печать.</li>
 									<li>Изготовление сувенирной продукции.</li>
-									<li>Hанесение изображения на одежду и многое другое.</li>
 									<li>Лазерная гравировка</li>
+									<li>Hанесение изображения на одежду и многое другое.</li>
 								</ul>
 
 							</div>
@@ -225,7 +225,7 @@
 						<form action="mailer/smart.php" method="POST" class="form">
 							<div class="form-main">
 								<div class="form-title">
-									Закажите нашу продукцию сейчас
+									Закажите нашу продукцию прямо сейчас
 								</div>
 								<!-- /.form-title -->
 								<input type="text" name="user_name" class="form-input" placeholder="Ваше имя" required>
@@ -617,7 +617,7 @@
 	<section class="section-slider order">
 		<div class="section-title order-section-title">
 			<h2>
-				Не нашли то что искали?
+				Не нашли, то что искали?
 			</h2>
 		</div>
 		<!-- /.section-title -->
@@ -986,7 +986,7 @@
 				<div class="popup_close">&#10005;</div>
 				<div class="form-main">
 					<div class="form-title">
-						Закажите макетные товары
+						Закажите нашу продукцию
 						прямо сейчас
 					</div>
 					<!-- /.form-title -->
